--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,4 +16,4 @@ NeedsCompilation: no
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-VignetteBuilder: knitr (> = 1.16)
+VignetteBuilder: knitr
